Fix tooltip flickering in chrome

--- a/app/assets/scss/bs-components/_tooltips.scss
+++ b/app/assets/scss/bs-components/_tooltips.scss
@@ -1,5 +1,6 @@
 // Tootltips ====================================
 
+.tooltip { pointer-events: none; } // Stops flickering on chrome
 
 // Style tooltip colours ----
 
